# hakoniwa-pdu-rpc

./: .gitmodules  CMakeLists.txt  GEMINI_PROJECT_CONTEXT.md  README.md  build.bash  install.bash  uninstall.bash
cmake/: FindHakoniwaPduEndpoint.cmake  hakoniwa_pdu_rpcConfig.cmake.in
config/sample/: client_endpoint.json  endpoints.json  simle-service.json  simple-service.json
config/sample/minimal/: README.md  client_endpoint.json  endpoints.json  queue.json  server_endpoint.json  simple-service.json  tcp_client_inout_comm.json  tcp_server_inout_comm.json
config/schema/: endpoints-schema.json  service-schema.json
docs/tutorials/: rpc.md
examples/: CMakeLists.txt  README.md  rpc_client.cpp  rpc_server.cpp
include/hakoniwa/pdu/: hakoniwa_pdu_rpc.hpp
include/hakoniwa/pdu/rpc/: pdu_rpc_client_endpoint.hpp  pdu_rpc_client_endpoint_impl.hpp  pdu_rpc_core.hpp  pdu_rpc_server_endpoint.hpp  pdu_rpc_server_endpoint_iml.hpp  pdu_rpc_server_endpoint_impl.hpp  pdu_rpc_time.hpp  pdu_rpc_types.hpp  rpc_client_endpoint.hpp  rpc_client_endpoint_impl.hpp  rpc_server_endpoint.hpp  rpc_server_endpoint_impl.hpp  rpc_service_helper.hpp  rpc_services_client.hpp  rpc_services_server.hpp  rpc_types.hpp
python/hakoniwa_pdu_rpc/: __init__.py  validate_configs.py
src/: CMakeLists.txt  endpoints_loader.hpp  hakoniwa_pdu_rpc.cpp  pdu_rpc_client_endpoint_impl.cpp  pdu_rpc_server_endpoint_iml.cpp  pdu_rpc_server_endpoint_impl.cpp  rpc_client_endpoint_impl.cpp  rpc_server_endpoint_impl.cpp  rpc_services_client.cpp  rpc_services_server.cpp
test/: CMakeLists.txt  abnormal_case_test.cpp  hakoniwa_pdu_rpc_test.cpp
test/configs/: endpoints.json  server_endpoint.json  service_config.json
tools/: README.md  validate_configs.py
